--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Responsive Video Background Landing Page</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="shortcut icon" href="css/fav.jpg"/>
+    <title>Dashboard - Febryan</title>
   </head>
   <body>
 
