--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="https://www.instagram.com/fbrynryn/" target="_blank">Instagram</a>
                 <a href="https://github.com/Febryan1453" target="_blank">Github</a>          
 
-             <!-- <a class="facebook socialicons" href="https://www.facebook.com/abc" title="Facebook " target="_blank">f</a>
+             <!-- <a ="facebook socialicons" href="https://www.facebook.com/abc" title="Facebook " target="_blank">f</a>
             <a class="twitter socialicons" href="https://twitter.com/abc" title="Twitter " target="_blank">t</a>
             <a class="googleplus socialicons" href="https://plus.google.com/abc" title="Google+" target="_blank">g+</a>
             <a class="linkedin socialicons" href="https://linkedin.com/abc" title="Linkedin" target="_blank">in</a> -->
