--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="shortcuticon" href="css/fav.jpg"/>
+    <link rel="shortcut icon" href="css/fav.jpg"/>
     <title>Dashboard - Febryan</title>
   </head>
   <body>
@@ -12,8 +12,10 @@
     <section id="main">
 
       <div class="container">
-        <video class="video" autoplay muted loop>
-          <source src="assets/stars.mp4" type="video/mp4" />
+        
+        <video class="video" autoplay loop> <!--  Tambahin "muted" -->
+
+          <source src="assets/keyboard.mov" type="video/mp4" />
         </video>
       </div>
 
@@ -47,7 +49,7 @@
                 <a href="https://www.instagram.com/fbrynryn/" target="_blank">Instagram</a>
                 <a href="https://github.com/Febryan1453" target="_blank">Github</a>          
 
-             <!-- <a ="facebook socialicons" href="https://www.facebook.com/abc" title="Facebook " target="_blank">f</a>
+             <!-- <a class="facebook socialicons" href="https://www.facebook.com/abc" title="Facebook " target="_blank">f</a>
             <a class="twitter socialicons" href="https://twitter.com/abc" title="Twitter " target="_blank">t</a>
             <a class="googleplus socialicons" href="https://plus.google.com/abc" title="Google+" target="_blank">g+</a>
             <a class="linkedin socialicons" href="https://linkedin.com/abc" title="Linkedin" target="_blank">in</a> -->
