--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="shortcut icon" href="css/fav.jpg"/>
-    <title>Dashboard - Febryan</title>
+    <title>My Portfolio</title>
   </head>
   <body>
 
@@ -21,7 +21,7 @@
 
 
       <navbar class="navbar">
-        <h1>Tarbiyah-Code</h1>
+        <h1>Febryan</h1>
         <ul>
           <li>
             <a href="#">Home</a>
@@ -38,7 +38,7 @@
         <h1>Web Development and Android Development</h1>
 
         <h3>
-           Silahkan follow <span>Tarbiyah-Code</span> di sosial media berikut.
+           Silahkan follow <span>Febryan</span> di sosial media berikut.
         </h3>
 
         <!-- <span>
