--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="page-content">
 
-        <h1>Web Development and Android Development</h1>
+        <h1>Web Developer and Android Developer</h1>
 
         <h3>
            Silahkan follow <span>Febryan</span> di sosial media berikut.
