--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
           <a href="#" target="_blank">Subscribe Now</a>
           </span>       -->
           <div class="sosmed">
-                <a href="https://www.facebook.com/RyanAlamsyam/" target="_blank">Facebook</a>
+               <!-- <a href="https://www.facebook.com/RyanAlamsyam/" target="_blank">Facebook</a> -->
+                <a href="https://www.linkedin.com/in/febryan1453/" target="_blank">LinkedIn</a>
                 <a href="https://www.instagram.com/fbrynryn/" target="_blank">Instagram</a>
-                <a href="https://github.com/Febryan1453" target="_blank">Github</a>          
+                <a href="https://github.com/Febryan1453" target="_blank">Github</a>  
+            
 
              <!-- <a class="facebook socialicons" href="https://www.facebook.com/abc" title="Facebook " target="_blank">f</a>
             <a class="twitter socialicons" href="https://twitter.com/abc" title="Twitter " target="_blank">t</a>
