--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
       <navbar class="navbar">
-        <h1 style="color: #ff5252;">Febryan</h1>
+        <h1 style="color: #ff5252;" class="ryan">Febryan</h1>
         <ul>
           <li>
             <a href="#">Home</a>
